--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:id="@+id/homeBtn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="5"
+            android:layout_weight="4"
             android:orientation="vertical"
 
             >
@@ -40,54 +40,78 @@
                 android:id="@+id/homeTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:text="Home"
                 android:layout_gravity="center"
                 />
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/eventBtn"
+            android:id="@+id/favoriteBtn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="5"
+            android:layout_weight="4"
             android:orientation="vertical"
             >
 
             <ImageView
-                android:id="@+id/eventIv"
+                android:id="@+id/favoriteIv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 />
             <TextView
-                android:id="@+id/eventTv"
+                android:id="@+id/favoriteTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:text="Like"
                 android:layout_gravity="center"
                 />
 
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/ratingBtn"
+            android:id="@+id/recommendBtn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:orientation="vertical">
-
+            android:layout_weight="4"
+            android:orientation="vertical"
+            >
 
             <ImageView
-                android:id="@+id/ratingIv"
+                android:id="@+id/recommendIv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 />
             <TextView
-                android:id="@+id/ratingTv"
+                android:id="@+id/recommendTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:text="Help"
+                android:layout_gravity="center"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/createBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:orientation="vertical">
+
+
+            <ImageView
+                android:id="@+id/createIv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                />
+            <TextView
+                android:id="@+id/createTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Create"
                 android:layout_gravity="center"
                 />
         </LinearLayout>
@@ -95,7 +119,7 @@
             android:id="@+id/profileBtn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="5"
+            android:layout_weight="4"
             android:orientation="vertical">
             <ImageView
                 android:id="@+id/profileIv"
@@ -108,7 +132,7 @@
                 android:id="@+id/profileTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:text="Profile"
                 android:layout_gravity="center"
                 />
         </LinearLayout>
