--- a/app/src/main/res/layout/fragment_recommend_menu.xml
+++ b/app/src/main/res/layout/fragment_recommend_menu.xml
@@ -5,11 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".Controller.Fragment.RecommendMenuFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <AutoCompleteTextView
+        android:id="@+id/autocomplete_materials"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
