--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -6,9 +6,18 @@
     tools:context=".Controller.Fragment.FavoriteMenuFragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/foodList"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:layout_width="match_parent" />
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:id="@+id/textShow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ยังไม่มีเมนูแนะนำในขณะนี้"
+        android:textSize="30dp"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        />
 </FrameLayout>
