--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -11,7 +11,7 @@
         android:padding="5dp"
         >
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/profile_imageIts"
+            android:id="@+id/profile_imageIts_comment"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/ic_action_name"
@@ -27,7 +27,7 @@
             >
 
             <TextView
-                android:id="@+id/nameIts"
+                android:id="@+id/nameIts_comment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
